--- a/wasm_example1/test1.html
+++ b/wasm_example1/test1.html
@@ -15,7 +15,7 @@
 
 <body id="wasm-example">
   <script type="module">
-      import init from "./pkg/wasm_examples.js";
+      import init from "./pkg/wasm_example1.js";
       init().then(() => {
           console.log("WASM Loaded");
       });
